codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__memories_enable_prompt.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: "render_bottom_popup(&chat, 80)"
---
  Enable memories?
  Memories are disabled in this TUI session.

› 1. Yes, enable  Save on the server for new threads. This thread is
                  unchanged.
  2. Not now      Keep memories disabled.

  Learn more: https://developers.openai.com/codex/memories
  ↑/↓ choose · enter confirm · esc back
